build/log/idf_py_stdout_output_52517
[1/12] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/wifi_module.c.obj
FAILED: esp-idf/components/CMakeFiles/__idf_components.dir/wifi_module.c.obj 
/home/arihant-jammar/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-2368-g52bca70b1a-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/arihant-jammar/Documents/ELL787/Project/ell787-project/build/config -I/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/newlib/platform_include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/config/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/config/include/freertos -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/config/xtensa/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/freertos/esp_additions/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_hw_support/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_hw_support/include/soc -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_hw_support/port/esp32/. -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/heap/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/log/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/soc/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/soc/esp32 -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/soc/esp32/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/hal/esp32/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/hal/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/hal/platform_port/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_rom/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_rom/include/esp32 -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_rom/esp32 -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_common/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_system/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_system/port/soc -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_system/port/include/private -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/xtensa/esp32/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/xtensa/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/xtensa/deprecated_include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/include/apps -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/include/apps/sntp -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/lwip/src/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/port/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/port/freertos/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/port/esp32xx/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_wifi/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_wifi/wifi_apps/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_event/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_phy/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_phy/esp32/include -I/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/arihant-jammar/Documents/ELL787/Project/ell787-project=. -fmacro-prefix-map=/home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/components/CMakeFiles/__idf_components.dir/wifi_module.c.obj -MF esp-idf/components/CMakeFiles/__idf_components.dir/wifi_module.c.obj.d -o esp-idf/components/CMakeFiles/__idf_components.dir/wifi_module.c.obj -c /home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c: In function 'int_to_hex':
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:15:21: error: stray '#' in program
   15 |     int x = chip_id;#define BORDER
      |                     ^
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:15:22: error: 'define' undeclared (first use in this function)
   15 |     int x = chip_id;#define BORDER
      |                      ^~~~~~
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:15:22: note: each undeclared identifier is reported only once for each function it appears in
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:15:28: error: expected ';' before string constant
   15 |     int x = chip_id;#define BORDER
      |                            ^
      |                            ;
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:17:5: error: 'a' undeclared (first use in this function)
   17 |     a=x/16;
      |     ^
/home/arihant-jammar/Documents/ELL787/Project/ell787-project/components/wifi_module.c:18:5: error: 'b' undeclared (first use in this function)
   18 |     b=x%16;
      |     ^
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/arihant-jammar/Documents/ELL787/Project/ell787-project/build/bootloader/esp-idf/esptool_py && /home/arihant-jammar/.espressif/python_env/idf5.2_py3.11_env/bin/python /home/arihant-jammar/Documents/ELL787/Project/ESP-IDF/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/arihant-jammar/Documents/ELL787/Project/ell787-project/build/bootloader/bootloader.bin
Bootloader binary size 0x68d0 bytes. 0x730 bytes (6%) free.
ninja: build stopped: subcommand failed.
